# OfficeDatabase

./: .gitignore  BraubergData.xlsx  CMakeLists.txt  CMakeLists.txt.user.6a689be  LustrofData.xlsx  README.md  main.cpp  mainwindow.ui  mainwindow.ui.autosave
DB/: BraubergData.xlsx  DBManufacturer.accdb  DBManufacturer.laccdb  LustrofData.xlsx
RCC/: DB.qrc  Medize.qss  StyleApp.qrc
RCC/Image/: Images.qrc
Sources/: AddContacts.cpp  AddContacts.h  AddTable.cpp  AddTable.h  BraubergProductTables.cpp  BraubergProductTables.h  BraubergTableName.cpp  BraubergTableName.h  ChangeLogo.cpp  ChangeLogo.h  Command.h  CreateModelIntoTable.cpp  CreateModelIntoTable.h  CreateTableIntoPage.cpp  CreateTableIntoPage.h  Find.h  FindIntoPage.cpp  FindIntoPage.h  FindIntoTable.cpp  FindIntoTable.h  FindProduct.cpp  FindProduct.h  FunctionsDataBase.cpp  FunctionsDataBase.h  Identify.h  IdentifyCompany.cpp  IdentifyCompany.h  IdentifyContacts.cpp  IdentifyContacts.h  IdentifyProduct.cpp  IdentifyProduct.h  LustrofProductTables.cpp  LustrofProductTables.h  LustrofTableName.cpp  LustrofTableName.h  MacroCommands.cpp  MacroCommands.h  ProductTables.cpp  ProductTables.h  TableModel.cpp  (+3 more)
Windows/: MainWindow.cpp  MainWindow.h  MainWindow.ui  Window.h  WindowContacts.cpp  WindowContacts.h  WindowContacts.ui  WindowFind.cpp  WindowFind.h  WindowFind.ui
